--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "JavaScript and web communication",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/Ograeset/sti-frontend/issues"
   },
-  "homepage": "https://github.com/Ograeset/sti-frontend#readme"
+  "homepage": "https://github.com/Ograeset/sti-frontend#readme",
+  "dependencies": {
+    "express": "^4.17.2",
+    "healthcheck": "^0.1.3",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0"
+  }
 }
