--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sti-frontend",
   "version": "1.0.0",
   "description": "JavaScript and web communication",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
