--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "express": "^4.17.2",
     "healthcheck": "^0.1.3",
     "path": "^0.12.7",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "standardized-audio-context": "^25.3.21",
+    "tone": "^14.7.77",
+    "tslib": "^2.3.1"
   }
 }
